src/test/deca/library/invalid/result/det_matrice_non_carree_output_expected.res
Le Det de la matrice est: La matrice doit être carrée pour le calcul du déterminant: 3 != 2
Erreur de dimension
